package edu.austral.ingsis.clifford;

public interface Visitable {
  void accept(Visitor visitor);
}
